--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -5,18 +5,21 @@
 <head>
 <title>Book List</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
+	th:href="@{css/bootstrap.min.css}" />
 </head>
 
 <body>
 	<h1>Books</h1>
-	<table class="table table-striped" >
+	<table class="table table-striped">
 		<tbody>
 			<tr>
 				<th>Author</th>
 				<th>Title</th>
 				<th>ISBN</th>
 				<th>Year</th>
+				<th>Category</th>
+				<th>Options</th>
 			</tr>
 			<tr th:each="books : ${books}">
 
@@ -24,11 +27,13 @@
 				<td th:text="${books.title}"></td>
 				<td th:text="${books.isbn}"></td>
 				<td th:text="${books.releaseYear}"></td>
-				<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${books.id})}">Delete</a> <a th:href="@{/edit/{id}(id=${books.id})}"> Edit</a></td>
+				<td th:text="${books.category.name}"></td>
+				<td><a th:href="@{/edit/{id}(id=${books.id})}"> Edit</a> <a
+					class="btn btn-danger" th:href="@{/delete/{id}(id=${books.id})}">Delete</a></td>
 			</tr>
 		</tbody>
 	</table>
-	<a class="btn btn-success" href="/add" >Add book</a>
+	<a class="btn btn-success" href="/add">Add book</a>
 </body>
 
 </html>
