--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -19,7 +19,8 @@
 				<th>ISBN</th>
 				<th>Year</th>
 				<th>Category</th>
-				<th>Options</th>
+				<th>Edit</th>
+				<th>Delete</th>
 			</tr>
 			<tr th:each="books : ${books}">
 
@@ -28,8 +29,8 @@
 				<td th:text="${books.isbn}"></td>
 				<td th:text="${books.releaseYear}"></td>
 				<td th:text="${books.category.name}"></td>
-				<td><a th:href="@{/edit/{id}(id=${books.id})}"> Edit</a> <a
-					class="btn btn-danger" th:href="@{/delete/{id}(id=${books.id})}">Delete</a></td>
+				<td><a th:href="@{/edit/{id}(id=${books.id})}"> Edit</a></td>
+				 <td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${student.id})}" class="btn btn-xs btn-danger">Delete</a></td> 
 			</tr>
 		</tbody>
 	</table>
